--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <button type="submit">Add item</button>
     </form>
 
+    
     <ul class="shopping-list">
       <li>
         <span class="shopping-item">apples</span>
@@ -66,6 +67,7 @@
       </li>
     </ul>
   </div>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
